[project]
name = "kronos-lama"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yunjia Xu", email = "jasonxu@umich.edu" }
]
dependencies = [
    "octoai>=1.0.2",
    "requests>=2.31.0",
    "bs4>=0.0.2",
    "pymongo>=4.7.2",
    "llama-index>=0.10.36",
    "pip>=24.0",
    "groq>=0.5.0",
    "streamlit>=1.34.0",
    "llama-index-readers-web>=0.1.13",
    "llama-index-vector-stores-mongodb>=0.1.5",
    "audiorecorder>=0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kronos_lama"]
